{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 91,
  "lineage": "c728b59e-10e7-7ce6-8e99-c2c71244d1b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02d9334856374f13a",
            "public_dns": "ec2-184-72-151-86.compute-1.amazonaws.com",
            "public_ip": "184.72.151.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecs-cluster-runner",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b22c910bce7178b6",
            "arn": "arn:aws:ec2:us-east-1:235190073377:instance/i-05c4216dfd5d3b89a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "default-cluster-runner-iam-profile",
            "id": "i-05c4216dfd5d3b89a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8dc986635e732a9",
            "private_dns": "ip-10-0-1-45.ec2.internal",
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-100-27-17-52.compute-1.amazonaws.com",
            "public_ip": "100.27.17.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fc9112008b0dc3df",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095251cd73fe00b71",
            "tags": {
              "Name": "default-ecs-cluster-runner",
              "Role": "ecs-cluster"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "default-ecs-cluster-runner",
              "Role": "ecs-cluster"
            },
            "vpc_security_group_ids": [
              "sg-0664a01b426fdd154"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ecs-cluster-runner-profile",
            "aws_iam_role.ecs-cluster-runner-role",
            "aws_security_group.ecs-cluster-host",
            "aws_subnet.my-public-sub-1",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "traning_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:235190073377:instance/i-070b46ecb996d8fcc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070b46ecb996d8fcc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d484b5b75937e85d",
            "private_dns": "ip-172-31-50-122.ec2.internal",
            "private_ip": "172.31.50.122",
            "public_dns": "ec2-34-224-2-191.compute-1.amazonaws.com",
            "public_ip": "34.224.2.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b088fb34f4164f5e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bcf0e482",
            "tags": {
              "Name": "training_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-52d82970"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a7658f22862b81bc",
            "owner_id": "235190073377",
            "tags": {
              "Name": "test_gateway"
            },
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d9334856374f13a",
            "id": "nat-078f0200d98e10957",
            "network_interface_id": "eni-05cd60a3a765f4ec8",
            "private_ip": "10.0.1.21",
            "public_ip": "184.72.151.86",
            "subnet_id": "subnet-095251cd73fe00b71"
          },
          "dependencies": [
            "aws_eip.my-nat-eip",
            "aws_subnet.my-public-sub-1",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0562be72c790d195c",
            "owner_id": "235190073377",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-078f0200d98e10957",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-rt"
            },
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_eip.my-nat-eip",
            "aws_nat_gateway.my-nat-gw",
            "aws_subnet.my-public-sub-1",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-public-sub-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0280c696395d1024b",
            "route_table_id": "rtb-0562be72c790d195c",
            "subnet_id": "subnet-095251cd73fe00b71"
          },
          "dependencies": [
            "aws_eip.my-nat-eip",
            "aws_nat_gateway.my-nat-gw",
            "aws_route_table.my-public-rt",
            "aws_subnet.my-public-sub-1",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-cluster-host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:security-group/sg-0664a01b426fdd154",
            "description": "default-ecs-cluster-host",
            "egress": [],
            "id": "sg-0664a01b426fdd154",
            "ingress": [],
            "name": "default-ecs-cluster-host",
            "name_prefix": null,
            "owner_id": "235190073377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-ecs-cluster-host",
              "Role": "ecs-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-web-ssh-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:security-group/sg-0098912e9506ee67f",
            "description": "security group that allow ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0098912e9506ee67f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-web-ssh-sg",
            "name_prefix": null,
            "owner_id": "235190073377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-web-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-cluster-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ecs cluster egress",
            "from_port": 0,
            "id": "sgrule-1799261555",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0664a01b426fdd154",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.ecs-cluster-host",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-cluster-host-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "admin SSH access to ecs cluster",
            "from_port": 22,
            "id": "sgrule-1455760462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0664a01b426fdd154",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.ecs-cluster-host",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-cluster-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "admin SSH access to ecs cluster",
            "from_port": 80,
            "id": "sgrule-3763304955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0664a01b426fdd154",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.ecs-cluster-host",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-sub-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:subnet/subnet-00854cf87441e449f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00854cf87441e449f",
            "map_public_ip_on_launch": false,
            "owner_id": "235190073377",
            "tags": {
              "Name": "my-private-sub-1"
            },
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-sub-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:subnet/subnet-0a5da6baab4a835ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a5da6baab4a835ec",
            "map_public_ip_on_launch": false,
            "owner_id": "235190073377",
            "tags": {
              "Name": "my-private-sub-2"
            },
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-sub-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:subnet/subnet-095251cd73fe00b71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-095251cd73fe00b71",
            "map_public_ip_on_launch": true,
            "owner_id": "235190073377",
            "tags": {
              "Name": "my-public-sub-1"
            },
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-sub-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:subnet/subnet-0d842c704d4edda87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d842c704d4edda87",
            "map_public_ip_on_launch": true,
            "owner_id": "235190073377",
            "tags": {
              "Name": "my-public-sub-2"
            },
            "vpc_id": "vpc-0f98afce4c7c19cd5"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:235190073377:vpc/vpc-0f98afce4c7c19cd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b401582e03c7c1ea",
            "default_route_table_id": "rtb-02a55d90ad6f6c5c2",
            "default_security_group_id": "sg-0d2b3e9cb8792ff15",
            "dhcp_options_id": "dopt-5c328c26",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f98afce4c7c19cd5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02a55d90ad6f6c5c2",
            "owner_id": "235190073377",
            "tags": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}